@@ -1842,14 +1842,14 @@ Please hit "back" and reload the page you came from, then try again.',
 'confirmprotecttext' => 'Do you really want to protect this page?',
 'confirmprotect' => 'Confirm protection',
 'protectmoveonly' => 'Protect from moves only',
-'protectcomment' => 'Reason for protecting',
-'protectexpiry' => 'Expiry',
+'protectcomment' => 'Comment:',
+'protectexpiry' => 'Expires:',
 'protect_expiry_invalid'	=> 'Expiry time is invalid.',
 'protect_expiry_old'	=> 'Expiry time is in the past.',
 'unprotectsub' =>"(Unprotecting \"$1\")",
 'confirmunprotecttext' => 'Do you really want to unprotect this page?',
 'confirmunprotect' => 'Confirm unprotection',
-'unprotectcomment' => 'Reason for unprotecting',
+'unprotectcomment' => 'Comment:',
 'protect-unchain' => 'Unlock move permissions',
 'protect-text' => 'You may view and change the protection level here for the page <strong>$1</strong>.',
 'protect-locked-blocked' => 'You cannot change protection levels while blocked. Here are the
@@ -1864,7 +1864,7 @@ Here are the current settings for the page <strong>$1</strong>:',
 'protect-level-sysop' => 'Sysops only',
 'protect-summary-cascade' => 'cascading',
 'protect-expiring' => 'expires $1 (UTC)',
-'protect-cascade' => 'Cascading protection - protect any pages included in this page.',
+'protect-cascade' => 'Protect pages included in this page',
 'restriction-type' => 'Permission:',
 'restriction-level' => 'Restriction level:',
 'minimum-size' => 'Min size',
